[package]
name = "rustyqimg"
authors = ["Eduard Gevorkyan <egevorkyan@outlook.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
binread = "2.2.0"
modular-bitfield = "0.11.2"
flate2 = { version = "1.0.25", default_features = true, features = ["zlib-ng-compat"] }
zstd = { version = "0.12.2+zstd.1.5.2", default_features = true }
libz-sys = "1.1.8"
semver = "1.0.16"